# moving_avg.rs

./: Cargo.toml  Readme.md
src/: lib.rs
